[package]
name = "hanger_lane"
version = "0.1.0"
authors = ["Thomas Elder <tgelder@gmail.com>"]

[dependencies]
rand = "0.4"
piston = "0.35"
piston2d-graphics = "0.24"
pistoncore-glutin_window = "0.43"
piston2d-opengl_graphics = "0.50"
network = { path = "network" }
hamcrest = "*"
clap = "~2.31"

[workspace]
